add image picker

--- a/BabyBirthday/BabyBirthday/ViewControllers/WelcomeViewController/Base.lproj/WelcomeViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/WelcomeViewController/Base.lproj/WelcomeViewController.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZIl-dE-lGH">
-                                <rect key="frame" x="20" y="95" width="728" height="34"/>
+                                <rect key="frame" x="20" y="115" width="728" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                 <connections>
@@ -24,19 +24,19 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Baby Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZz-Kp-Rag">
-                                <rect key="frame" x="20" y="70" width="137.5" height="21"/>
+                                <rect key="frame" x="20" y="90" width="137.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose date birthday:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wEo-ID-2PX">
-                                <rect key="frame" x="20" y="159" width="170" height="21"/>
+                                <rect key="frame" x="20" y="179" width="170" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Birthday" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m8a-8j-zFZ">
-                                <rect key="frame" x="20" y="184" width="728" height="34"/>
+                                <rect key="frame" x="20" y="204" width="728" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                 <connections>
@@ -44,7 +44,7 @@
                                 </connections>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="companyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ad4-Zh-HkX">
-                                <rect key="frame" x="355.5" y="20" width="57" height="20"/>
+                                <rect key="frame" x="327" y="20" width="114" height="40"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="za9-An-87k">
                                 <rect key="frame" x="20" y="984" width="728" height="30"/>
@@ -59,11 +59,22 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder_camera_blue" translatesAutoresizingMaskIntoConstraints="NO" id="xcA-H4-0TH">
-                                <rect key="frame" x="249" y="248" width="270" height="270"/>
+                                <rect key="frame" x="249" y="268" width="270" height="270"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="270" id="We4-5a-kII"/>
+                                    <constraint firstAttribute="width" constant="270" id="mJr-Ho-D7K"/>
+                                </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejM-N5-FRW">
-                                <rect key="frame" x="366" y="528" width="36" height="36"/>
+                                <rect key="frame" x="366" y="548" width="36" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="nzp-Xw-hEx"/>
+                                    <constraint firstAttribute="width" constant="36" id="wTV-kp-6sE"/>
+                                </constraints>
                                 <state key="normal" backgroundImage="Camera_icon_blue"/>
+                                <connections>
+                                    <action selector="makePhotoTappedWithButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FZh-ng-yHK"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
