--- a/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
@@ -14,13 +14,64 @@
                     <view key="view" contentMode="scaleToFill" id="iLX-pV-Rkv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yKU-ZI-eFU">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="7" translatesAutoresizingMaskIntoConstraints="NO" id="DZi-wJ-KhH">
+                                <rect key="frame" x="174" y="106" width="66" height="89"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IS BLA BLA BLA" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQf-he-UpW">
+                                <rect key="frame" x="80" y="67" width="254" height="23"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Left swirls" translatesAutoresizingMaskIntoConstraints="NO" id="re6-pP-niI">
+                                <rect key="frame" x="104" y="132" width="52" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="gqM-kl-ptB"/>
+                                    <constraint firstAttribute="width" constant="52" id="o52-2v-GOw"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Right swirls" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-6o-bf1">
+                                <rect key="frame" x="257" y="132" width="52" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="azV-af-VIH"/>
+                                    <constraint firstAttribute="height" constant="46" id="q9q-fI-IgW"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="LQf-he-UpW" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="80" id="5ca-0b-nEe"/>
+                            <constraint firstAttribute="bottom" secondItem="yKU-ZI-eFU" secondAttribute="bottom" id="JcN-kI-wGL"/>
+                            <constraint firstItem="re6-pP-niI" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="132" id="LuL-xE-v4d"/>
+                            <constraint firstItem="yKU-ZI-eFU" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" id="PA7-FV-7JC"/>
+                            <constraint firstItem="DZi-wJ-KhH" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="QSU-Ow-TIo"/>
+                            <constraint firstItem="QiA-6o-bf1" firstAttribute="leading" secondItem="DZi-wJ-KhH" secondAttribute="trailing" constant="17" id="Vmt-Gy-0Ph"/>
+                            <constraint firstItem="DZi-wJ-KhH" firstAttribute="leading" secondItem="re6-pP-niI" secondAttribute="trailing" constant="18" id="WdA-iC-wgg"/>
+                            <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="LQf-he-UpW" secondAttribute="bottom" constant="16" id="XiG-Yh-L0h"/>
+                            <constraint firstItem="QiA-6o-bf1" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="132" id="Zfd-TO-zQU"/>
+                            <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="106" id="dK6-pI-96I"/>
+                            <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="LQf-he-UpW" secondAttribute="trailing" constant="80" id="fcJ-uV-eH9"/>
+                            <constraint firstItem="yKU-ZI-eFU" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" id="hmS-4C-piL"/>
+                            <constraint firstItem="yKU-ZI-eFU" firstAttribute="trailing" secondItem="sL2-2Z-VuB" secondAttribute="trailing" id="uYT-L4-Csw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="sL2-2Z-VuB"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="yKU-ZI-eFU" id="Fw1-7g-oFk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7fg-Sv-XsA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="228" y="180"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="7" width="66" height="89"/>
+        <image name="Left swirls" width="52" height="46"/>
+        <image name="Right swirls" width="52" height="46"/>
+    </resources>
 </document>
