--- a/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
@@ -23,7 +23,7 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IS BLA BLA BLA" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQf-he-UpW">
                                 <rect key="frame" x="80" y="67" width="254" height="23"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -34,6 +34,23 @@
                                     <constraint firstAttribute="width" constant="52" id="o52-2v-GOw"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nob-E1-1Ok">
+                                <rect key="frame" x="181.5" y="210" width="51.5" height="19"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="19" id="cnt-IZ-PWV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5o-6R-cCx">
+                                <rect key="frame" x="17" y="17" width="14" height="14"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="14" id="7G5-Nr-SYO"/>
+                                    <constraint firstAttribute="width" constant="14" id="GLK-eX-EHh"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="btn_close"/>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Right swirls" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-6o-bf1">
                                 <rect key="frame" x="257" y="132" width="52" height="46"/>
                                 <constraints>
@@ -45,6 +62,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="LQf-he-UpW" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="80" id="5ca-0b-nEe"/>
+                            <constraint firstItem="nob-E1-1Ok" firstAttribute="top" secondItem="DZi-wJ-KhH" secondAttribute="bottom" constant="15" id="B8W-LI-QVa"/>
+                            <constraint firstItem="nob-E1-1Ok" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="Hfd-2v-BDH"/>
                             <constraint firstAttribute="bottom" secondItem="yKU-ZI-eFU" secondAttribute="bottom" id="JcN-kI-wGL"/>
                             <constraint firstItem="re6-pP-niI" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="132" id="LuL-xE-v4d"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" id="PA7-FV-7JC"/>
@@ -56,12 +75,17 @@
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="106" id="dK6-pI-96I"/>
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="LQf-he-UpW" secondAttribute="trailing" constant="80" id="fcJ-uV-eH9"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" id="hmS-4C-piL"/>
+                            <constraint firstItem="h5o-6R-cCx" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="17" id="oWJ-ct-lNO"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="trailing" secondItem="sL2-2Z-VuB" secondAttribute="trailing" id="uYT-L4-Csw"/>
+                            <constraint firstItem="h5o-6R-cCx" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="17" id="wnW-Ys-RkZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sL2-2Z-VuB"/>
                     </view>
                     <connections>
+                        <outlet property="babeAgeLabel" destination="nob-E1-1Ok" id="1kc-hS-SwP"/>
+                        <outlet property="babeNameLabel" destination="LQf-he-UpW" id="7yH-Tj-rMy"/>
                         <outlet property="backgroundImageView" destination="yKU-ZI-eFU" id="Fw1-7g-oFk"/>
+                        <outlet property="numberImageView" destination="DZi-wJ-KhH" id="UbG-LL-neQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7fg-Sv-XsA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -73,5 +97,6 @@
         <image name="7" width="66" height="89"/>
         <image name="Left swirls" width="52" height="46"/>
         <image name="Right swirls" width="52" height="46"/>
+        <image name="btn_close" width="14" height="14"/>
     </resources>
 </document>
