--- a/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
@@ -15,11 +15,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ERi-oy-g2q">
+                                <rect key="frame" x="73.5" y="308" width="228" height="228"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="228" id="Qfb-qe-kR0"/>
+                                    <constraint firstAttribute="width" constant="228" id="xH0-dO-bf7"/>
+                                </constraints>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yKU-ZI-eFU">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="7" translatesAutoresizingMaskIntoConstraints="NO" id="DZi-wJ-KhH">
-                                <rect key="frame" x="121.5" y="106" width="132" height="178"/>
+                                <rect key="frame" x="154.5" y="106" width="66" height="89"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IS BLA BLA BLA" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQf-he-UpW">
                                 <rect key="frame" x="80" y="67" width="215" height="23"/>
@@ -28,14 +35,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Left swirls" translatesAutoresizingMaskIntoConstraints="NO" id="re6-pP-niI">
-                                <rect key="frame" x="51.5" y="132" width="52" height="46"/>
+                                <rect key="frame" x="84.5" y="132" width="52" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="gqM-kl-ptB"/>
                                     <constraint firstAttribute="width" constant="52" id="o52-2v-GOw"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nob-E1-1Ok">
-                                <rect key="frame" x="162" y="299" width="51.5" height="19"/>
+                                <rect key="frame" x="162" y="210" width="51.5" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="19" id="cnt-IZ-PWV"/>
                                 </constraints>
@@ -55,14 +62,14 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Right swirls" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-6o-bf1">
-                                <rect key="frame" x="270.5" y="132" width="52" height="46"/>
+                                <rect key="frame" x="237.5" y="132" width="52" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="52" id="azV-af-VIH"/>
                                     <constraint firstAttribute="height" constant="46" id="q9q-fI-IgW"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ph0-tE-Hzg">
-                                <rect key="frame" x="107.5" y="246" width="160" height="40"/>
+                                <rect key="frame" x="107.49999999999999" y="246" width="160.00000000000003" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="Mjb-pn-ElO"/>
                                     <constraint firstAttribute="height" constant="40" id="Odv-0C-KAJ"/>
@@ -79,12 +86,15 @@
                                     <constraint firstAttribute="width" constant="36" id="jHt-Od-heR"/>
                                 </constraints>
                                 <state key="normal" backgroundImage="Camera_icon_blue"/>
+                                <connections>
+                                    <action selector="makePhotoTappedWithButton:" destination="kmf-Yi-DZW" eventType="touchUpInside" id="82e-iC-poq"/>
+                                </connections>
                             </button>
                             <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Kjg-ke-cAy">
                                 <rect key="frame" x="20" y="629" width="335" height="22"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="companyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="sBZ-QZ-gSm">
-                                        <rect key="frame" x="110.5" y="0.0" width="114" height="22"/>
+                                        <rect key="frame" x="139" y="0.0" width="57" height="22"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -94,6 +104,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="ERi-oy-g2q" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="22" id="5Kg-wz-oKY"/>
                             <constraint firstItem="LQf-he-UpW" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="80" id="5ca-0b-nEe"/>
                             <constraint firstItem="Kjg-ke-cAy" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="20" id="7ue-Ym-nBB"/>
                             <constraint firstItem="nob-E1-1Ok" firstAttribute="top" secondItem="DZi-wJ-KhH" secondAttribute="bottom" constant="15" id="B8W-LI-QVa"/>
@@ -115,6 +126,7 @@
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="Kjg-ke-cAy" secondAttribute="trailing" constant="20" id="m32-sN-IeG"/>
                             <constraint firstItem="Xek-CQ-2nw" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="50" id="o1v-0J-IIv"/>
                             <constraint firstItem="h5o-6R-cCx" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="17" id="oWJ-ct-lNO"/>
+                            <constraint firstItem="ERi-oy-g2q" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="qVY-lb-3jZ"/>
                             <constraint firstItem="ph0-tE-Hzg" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="sSE-ap-Th2"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="trailing" secondItem="sL2-2Z-VuB" secondAttribute="trailing" id="uYT-L4-Csw"/>
                             <constraint firstItem="h5o-6R-cCx" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="17" id="wnW-Ys-RkZ"/>
@@ -128,6 +140,7 @@
                         <outlet property="logoStackView" destination="Kjg-ke-cAy" id="tAV-Sa-gbJ"/>
                         <outlet property="numberImageView" destination="DZi-wJ-KhH" id="UbG-LL-neQ"/>
                         <outlet property="photoButton" destination="Xek-CQ-2nw" id="Xul-ta-cLl"/>
+                        <outlet property="photoImageView" destination="ERi-oy-g2q" id="0pv-ND-BpM"/>
                         <outlet property="shareButton" destination="ph0-tE-Hzg" id="N5a-00-teZ"/>
                     </connections>
                 </viewController>
